--- a/src/app/pages/gest-documental/memorandos/memorandos.component.html
+++ b/src/app/pages/gest-documental/memorandos/memorandos.component.html
@@ -69,7 +69,7 @@
                                 <td class="text-center"><small>{{memorando.fechaRegistro | date}}</small></td>
                                 <td class="text-center"><small>{{memorando.usuarioRegistro.nombre}}</small></td>
                                 <td class="text-nowrap text-center">
-                                    <a class="cursor" title="Dar Respuesta a la Petición" data-toggle="tooltip" data-original-title="Dar Respuesta a la Petición" (click)="responderSolicitudMemorando(memorando)">
+                                    <a class="cursor" title="Consignar la respuesta del memorando" data-toggle="tooltip" data-original-title="Dar Respuesta a la Petición" (click)="responderSolicitudMemorando(memorando)">
                                         <i class="fa fa-reply text-inverse m-r-10"></i>
                                     </a>
                                     &nbsp; &nbsp;
