--- a/src/app/pages/gest-documental/memorandos/nuevo-memorando.component.html
+++ b/src/app/pages/gest-documental/memorandos/nuevo-memorando.component.html
@@ -56,7 +56,7 @@
                     <div class="row p-t-20">
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label class="control-label label-form-decora">Norma infringida en el evento:</label>
+                                <label class="control-label label-form-decora">Norma(s) infringida(s) en el evento:</label>
                                 <div class="input-group">
                                     <div class="input-group-addon"><i class="ti-comment"></i></div>
                                     <textarea class="form-control text-area" formControlName="normaInfringida"></textarea>
@@ -65,7 +65,7 @@
                         </div>
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label class="control-label label-form-decora">Posibles consecuencias disciplinarias:</label>
+                                <label class="control-label label-form-decora">Medidas disciplinarias por tomar:</label>
                                 <div class="input-group">
                                     <div class="input-group-addon"><i class="ti-comment"></i></div>
                                     <textarea class="form-control text-area" formControlName="posiblesConsecuencias"></textarea>
