--- a/src/app/pages/personalrrhh/empleados/actualiza-empleado.component.html
+++ b/src/app/pages/personalrrhh/empleados/actualiza-empleado.component.html
@@ -27,7 +27,8 @@
                                         <option value="C.C.">Cédula de Ciudadanía</option>
                                         <option value="C.E.">Cédula de Extranjería</option>
                                         <option value="PAS">Pasaporte</option>
-                                        <option value="DIE">Documento de Identificación Extranjero</option>
+                                        <option value="PPT">Permiso por Protecion Temporal</option>
+                                        <option value="PEP">Permiso Especial de Permanencia</option>
                                     </select>
                                 </div>
                             </div>
@@ -148,52 +149,6 @@
                                 <div class="input-group">
                                     <div class="input-group-addon"><i class="ti-bell"></i></div>
                                     <input [(ngModel)]="empleadoActualizar.telContEmer" name="telContEmer" autocomplete="off" type="text" id="emergencyPhone" class="form-control" placeholder="###-#######" required>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="row p-t-20">
-                        <div class="col-md-6">
-                            <div class="form-group">
-                                <label class="control-label label-form-decora">Entidad Bancaria</label>
-                                <div class="input-group">
-                                    <div class="input-group-addon"><i class="ti-stats-up"></i></div>
-                                    <select [(ngModel)]="empleadoActualizar.entidadBanco" name="entidadBanco" class="form-control custom-select" required>
-                                        <option value="">--Seleccione una opción--</option>
-                                        <option value="Bancamia S.A.">Bancamia S.A.</option>
-                                        <option value="Banco Agrario">Banco Agrario</option>
-                                        <option value="Banco AV Villas">Banco AV Villas</option>
-                                        <option value="Banco BBVA Colombia">Banco BBVA Colombia</option>
-                                        <option value="Banco Caja Social">Banco Caja Social</option>
-                                        <option value="Banco Davivienda">Banco Davivienda</option>
-                                        <option value="Banco de Bogotá">Banco de Bogotá</option>
-                                        <option value="Banco de Occidente">Banco de Occidente</option>
-                                        <option value="Banco Falabella">Banco Falabella</option>
-                                        <option value="Banco GNB Sudameris">Banco GNB Sudameris</option>
-                                        <option value="Bancolombia">Bancolombia</option>
-                                        <option value="Banco Scotiabank Colpatria">Banco Scotiabank Colpatria</option>
-                                        <option value="Banco Popular">Banco Popular</option>
-                                        <option value="Banco ITAU">Banco ITAU</option>
-                                        <option value="Banco Pichincha S.A.">Banco Pichincha S.A.</option>
-                                        <option value="Banco Serfinanza">Banco Serfinanza</option>
-                                        <option value="DaviPlata">DaviPlata</option>
-                                        <option value="Nequi-Bancolombia">Nequi-Bancolombia</option>
-                                        <option value="Super Giros">Super Giros</option>
-                                        <option value="Movii S.A.">Movii S.A.</option>
-                                        <option value="RappiPay">RappiPay</option>
-                                        <option value="Efectivo">Efectivo</option>
-                                        <option value="NO ESPECIFICA">NO ESPECIFICA</option>
-                                    </select>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="form-group">
-                                <label class="control-label label-form-decora">Cuenta Bancaria</label>
-                                <div class="input-group">
-                                    <div class="input-group-addon"><i class="ti-money "></i></div>
-                                    <input [(ngModel)]="empleadoActualizar.numCuentaBanco" name="numCuentaBanco" autocomplete="off" type="text" id="bankAccount" class="form-control" placeholder="#-######-#" required>
                                 </div>
                             </div>
                         </div>
